--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -46,8 +46,8 @@
 
             {{#each images}}
             <div class="col-md-4">
-                <a href="/images/{{_Id}}">
-                    <img src="/public/upload/{{this.filename}}" alt="{{title}}" class="img-thumbnail">
+                <a href="upload/{{this.filename}}">
+                    <img src="upload/{{this.filename}}" alt="{{title}}" class="img-thumbnail">
                 </a>
             </div>
             {{/each}}
