--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -43,15 +43,26 @@
     </div>
     <div class="card-body">
         <div class="row">
-
-            {{#each images}}
-            <div class="col-md-4">
-                <a href="upload/{{this.filename}}">
-                    <img src="upload/{{this.filename}}" alt="{{title}}" class="img-thumbnail">
-                </a>
-            </div>
-            {{/each}}
-
+ {{#each images}}
+        <div class="col-md-4 text-center">
+          <a href="/images/{{uniqueId}}">
+            <img
+              src="/uploads/{{this.filename}}"
+              alt="{{title}}"
+              class="w-100 h-100"
+              style="object-fit: cover;"
+            />
+          </a>
+        </div>
+      {{else}}
+        <div class="text-light text-center p-5">
+          <h1 class="text-light">There are no Images <strong>yet</strong></h1>
+          <p>Upload your first image</p>
+          <span class="material-icons" style="font-size: 7rem;">
+            add_a_photo
+          </span>
+        </div>
+      {{/each}}
         </div>
     </div>
 </div>
