--- a/src/views/partials/image.hbs
+++ b/src/views/partials/image.hbs
@@ -5,7 +5,9 @@
         <h2>{{image.title}}</h2>
     </div>
     <div class="card-body">
+        <button class="btn btn-danger" id ="btn-delete" data-id = "{{image.uniqueId}}">
         <a href="/images/{{this.filename}}">
+        <i class= "fa-fa-times"> </i> delete
           
             <img src="/public/upload/{{this.filename}}" alt="{{image.title}}" class="img-fluid">
         </a>
